[metadata]
description=A package for estimating model-data flux correlations.
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
platform=any
keywords=
    temporal correlation function
    autocorrelation model
    surface flux

[options]
setup_requires=
    setuptools
    Cython
    numpy
    enum34; python_version < "3.4"
install_requires=
    numpy
    enum34; python_version < "3.4"
python_requires= >=3.5, <4

[options.extras_require]
scripts=
    pandas
    numexpr
    matplotlib


[sdist]
formats=bztar,zip,gztar